# ssh-todolist

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.js  compose.yaml  environment.yml  index.html  install.sh  pyproject.toml  requirements.txt  run.sh  server.py  styles.css
.github/workflows/: services-release.yml
backend/: __init__.py  admin_activity.py  admin_config.py  admin_dashboard.py  admin_guidance.py  auth.py  connection.py  connection_links.py  connection_urls.py  http_admin_assets.py  http_auth.py  http_logging.py  http_responses.py  http_routes.py  http_server.py  network.py  realtime.py  service.py  service_errors.py  service_list_validators.py  service_todo_validators.py  service_validation_common.py  service_validators.py  store.py
backend/admin/: __init__.py  admin.css  admin.js  index.html
tests/: test_admin_config.py  test_auth.py  test_connection.py  test_dashboard.py  test_http_admin_assets.py  test_http_auth.py  test_http_logging.py  test_http_routes.py  test_http_server.py  test_network.py  test_service_admin.py  test_service_validators.py  test_store.py
